--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body
 {
+    background-color: blue;
     color: #333;
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -34,4 +35,9 @@ body
 #cabecera span{
     color: chartreuse;
     font-weight: bold;
+}
+
+#cavecera #logo{
+    width: 20px;
+    vertical-align: middle;
 }
