correccion color post y logo

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,11 @@ body
     font-weight: bold;
 }
 
-#cavecera #logo{
+#cabecera #logo{
     width: 20px;
     vertical-align: middle;
+}
+
+#post{
+    background-color: white;
 }
